--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,24 @@
-    
 body {
+  background: url("../images/Foggy_Forest_Mountains_Tree.jpg") no-repeat center
+    center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
-    background: url("../images/Foggy_Forest_Mountains_Tree.jpg") no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    
-    
-    }
+.navbar-toggler {
+  background-color: #fff;
+  border: none;
+
+}
 
 
-#test {
 
-font-family: 'Acme', sans-serif;
-font-size: 60pt;
-color: red;
-font-weight: bold;
+/* MEDIA QUERIES */
 
+@media screen and (max-width: 768px) {
+  #myName {
+    width: 6em !important;
+  }
 }
