js files added to assets.  HTML & CSS updates.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,13 @@ body {
  line-height: 25px;
 
 
+}
 
+#contact-form {
+
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14pt;
+  line-height: 25px;
 
 }
 
