--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,14 +79,12 @@ body {
 
 
 @media screen and (max-width: 980px) {
-    #myPic {
-       
-    
-
-
+    #cont-top {
+      max-width: 100%;
+      font-size: 10pt;
+      margin-left: -10;
+      color: red;
     }
-
-
   
   }
 
